# tabular-data

./: .bumpversion.cfg  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  PROMPTS_PIPELINES.md  README.md  app.py  app_script.py  app_script_pk_summary.py  app_script_pmids.py  app_websocket.py  docker-compose.yml  pk_prompt_list.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
TabFuncFlow/: TableFunctionFlowTutorial.ipynb
benchmark/: comm_llm.py  comm_semantic.py  common.py  conftest.py  constant.py  evaluate.py  pe_benchmark_with_semantic.py  pe_preprocess.py  pk_individual_benchmark_with_semantic.py  pk_preprocess.py  pk_summary_benchmark_with_semantic.py  preprocess.py  run_pe_pipeline_benchmark.py  test_benchmark_individual_semantic.py  test_benchmark_with_claude.py  test_benchmark_with_claude_temp.py  test_benchmark_with_llm.py  test_benchmark_with_semantic.py  test_pe_benchmark_with_llm.py  test_pe_benchmark_with_semantic.py  test_pk_benchmark_with_llm.py  test_pk_individual_benchmark_with_semantic.py  test_pk_individual_benchmark_with_semantic_specified_pmid.py  test_pk_summary_benchmark_with_llm.py  test_pk_summary_benchmark_with_semantic.py  test_pk_summary_benchmark_with_semantic_specified_pmid.py  test_pk_summary_benchmark_with_sematic.py  test_pk_summary_single_benchmark_with_semantic.py  utils.py
components/: html_table_tab.py  main_tab.py  new_tab.py  table_utils.py
data/: 16143486.html  17635501.html  22050870.html  29943508.html  30825333.html  34114632.html  34183327.html  35465728.html  35489632.html
databases/: constants.py  db_utils.py  job_db.py  job_result_db.py
extractor/: article_retriever.py  constants.py  full_text_vectordb.py  generated_table_processor.py  html_table_extractor.py  llm_utils.py  log_utils.py  make_request.py  pk_sum_extractor.py  prompts_utils.py  request_deepseek.py  request_geminiai.py  request_gpt_oss.py  request_metallama.py  request_openai.py  request_sonnet.py  stampers.py  table_utils.py  utils.py
prompts/: default_prompts.json  pe_prompts.json  pk_prompts.json  pk_prompts_0107.json
scripts/: convert_md_table_to_csv.py
src/: article_retriever.py  article_stamper.py  doi_article_retriever.py  download_paper.py  download_paper_1.py  html_table_extractor.py  make_request.py  paper_analyzer.py  prompts_utils.py  request_geminiai.py  request_openai.py  request_paper.py  utils.py
system_tests/: conftest.py  conftest_data.py  conftest_data_10971311.py  conftest_data_11849190.py  conftest_data_18426260.py  conftest_data_23200982.py  conftest_data_33253437.py  conftest_data_34746508.py  test_ChatOllama.py  test_TabFuncFlow.py  test_article_retriever.py  test_code_step_gpt_oss.py  test_llm.py  test_llm_1.py  test_pk_drug_ind_task.py  test_pk_ind_drug_info_step.py  test_pk_ind_drug_mapping_step.py  test_pk_ind_header_categorize_step.py  test_pk_ind_param_type_align_step.py  test_pk_ind_param_type_unit_extract_step.py  test_pk_ind_patient_info_refine_step.py  test_pk_ind_patient_info_step.py  test_pk_ind_patient_mapping_step.py  test_pk_ind_preprocess_step.py  test_pk_ind_split_by_col_step.py  (+31 more)
(+852 files in other folders)
